<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/imageView2"
        android:src="@drawable/smile"
        android:layout_x="124dp"
        android:layout_y="-13dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_alta"
        android:id="@+id/textView3"
        android:layout_x="137dp"
        android:layout_y="149dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:textSize="25dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alta_form"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:hint="@string/alta_nombre"
        android:layout_gravity="center_horizontal"
        android:textSize="12dp"
        android:singleLine="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText4"
        android:hint="@string/alta_apellido"
        android:layout_gravity="center_horizontal"
        android:textSize="12dp"
        android:singleLine="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText5"
        android:hint="@string/usuario"
        android:layout_gravity="center_horizontal"
        android:textSize="12dp"
        android:singleLine="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:hint="@string/mail"
        android:layout_gravity="center_horizontal"
        android:textSize="12dp"
        android:singleLine="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText6"
        android:hint="@string/clave"
        android:layout_gravity="center_horizontal"
        android:textSize="12dp"
        android:singleLine="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText7"
        android:hint="@string/re_clave"
        android:layout_gravity="center_horizontal"
        android:textSize="12dp"
        android:singleLine="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:id="@+id/btnAlta"
        android:layout_gravity="center_horizontal"
        android:background="#a5d3fe"
        android:textAllCaps="false" />

</LinearLayout>
