<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".login.LoginActivity"
    android:weightSum="1">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/imageView"
        android:src="@drawable/smile"
        android:layout_x="124dp"
        android:layout_y="-13dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenida"
        android:id="@+id/textView"
        android:layout_x="137dp"
        android:layout_y="149dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:textSize="25dp"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bienvenida_sub"
        android:id="@+id/textView2"
        android:textSize="16dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtUser"
        android:hint="@string/usuario_mail"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:singleLine="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/txtPass"
        android:hint="@string/clave"
        android:layout_below="@+id/txtUser"
        android:layout_alignParentStart="true"
        android:singleLine="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recordar"
        android:id="@+id/chkRecordar"
        android:layout_below="@+id/txtPass"
        android:layout_alignParentStart="true"
        android:checked="true" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrar"
            android:id="@+id/btnRegistrar"
            android:background="#a5d3fe"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:textAllCaps="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingresar"
            android:id="@+id/btnIngresar"
            android:background="#a5d3fe"
            android:layout_marginLeft="180dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="44dp"
            android:textAllCaps="false" />
    </RelativeLayout>

</LinearLayout>
