<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".categoria.CategoriaActivity"
    android:weightSum="1"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cate_titulo"
        android:id="@+id/tvTitulo"
        android:layout_gravity="center_horizontal" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtNombre"
        android:hint="@string/cate_nombre"
        android:singleLine="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtDescripcion"
        android:hint="@string/cate_texto"
        android:maxLines="1" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fav"
            android:id="@+id/chkFav"
            android:checked="true"
            android:layout_marginBottom="74dp"
            android:layout_alignParentBottom="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crear"
            android:id="@+id/btnCrear"
            android:background="#a5d3fe"
            android:layout_marginLeft="180dp"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="74dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCamara"
            android:src="@android:drawable/ic_menu_camera"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgCamara"
            android:layout_below="@+id/btnCamara"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</LinearLayout>


